[package]
name = "my_library"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
datafusion-python = { git = "https://github.com/Michael-J-Ward/datafusion-python", branch = "static-tokio-runtime" }

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "abi3", "abi3-py38"]
